--- a/html/task.html
+++ b/html/task.html
@@ -44,6 +44,9 @@
 						<div id="pullUp" name="nodata" align="center" class="" style="display:none;color: black;">
 							<span class="pullUpLabel">上拉加载更多...</span>
 						</div>
+						<div>
+							<br/><br/><br/>
+						</div>
 					</div>
 				</div>
 			</div>
