--- a/html/ipad.html
+++ b/html/ipad.html
@@ -134,7 +134,13 @@
 	//加载请示查阅
 	function loadqueryList() {
 		localStorage.setItem("click", "querytask");
-		localStorage.setItem("click4", "1");
+		var click4 = localStorage.getItem("click4");
+		if(click4=="2"){
+			localStorage.setItem("click4", "2");
+		}else{
+			localStorage.setItem("click4", "1");
+		}
+		
 		 document.getElementById("tabbox").style.display='none';//更改ipad页面中tab 是否显示。
 		  $("#middleContent").load("queryList.html", function(a, b, c) {
 			
@@ -156,9 +162,11 @@
 	}
 	//获取中文名  获取待办列表时用
 	function createUser() {
+		//客户端获取cookie
+		
 		$.hori.ajax({
 			"type" : "get",
-			"url" : $.hori.getconfig().appServerHost+"/view/oa/currentuser/docapp/genertec/persontasks.nsf/frmPage?openform",
+			"url" : $.hori.getconfig().appServerHost+"/view/oa/currentuser/doctest/genertec/persontasks.nsf/frmPage?openform",
 			"success" : function(res) {
 				//localStorage.setItem("Chinesename", res);
 				currentUser = "CN=" + res + "/O=genertec";
