获取当前登录人

--- a/html/login.html
+++ b/html/login.html
@@ -100,6 +100,7 @@
 						//本地存储itcode 和oaServerName
 						localStorage.setItem("oaServerName",$.hori.getconfig().oaServerName)
 						localStorage.setItem("itcode",username);
+						localStorage.setItem("click", "news");
 						saveUserInfoToLocal(username);
 						
 						var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/ipad.html";	
