--- a/html/ipad.html
+++ b/html/ipad.html
@@ -18,311 +18,13 @@
 <script src="../lib/encrypt/encrypt.js"></script>
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
-<script
-	src="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.js"></script>
+<script src="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.js"></script>
 <script src="../lib/knockout/knockout.js"></script>
 <script src="../lib/knockout/knockout.mapping.js"></script>
 <script src="../lib/app/home/app.js"></script>
 <script src="../lib/app/home/tabChange.js"></script>
 <script src="../config/web/config.js"></script>
 <script src="asset/js/echarts-plain-original.js"></script>
-<<<<<<< HEAD
-	<script type="text/javascript" src="asset/js/echartsHome.js"></script>
-	<script src="asset/js/bootstrap.min.js"></script>
-	<script src="asset/js/echartsExample.js"></script>
-
-<script type="text/javascript">
-	$(document).ready(function() {
-		createUser();
-		try {
-			var hori = $.hori;
-			hori.hideBackBtn();
-			/*注册注销事件*/
-			hori.registerEvent("case", "navButtonTouchUp", function() {
-				hori.backPage(1);
-			});
-			//ios 隐藏邮件图标
-
-			if (hori.getMobileType() == "apple") {
-				$("#divMail").hide();
-			}
-			var itcode = localStorage.getItem("itcode");
-			var clickVal = localStorage.getItem("click");
-			if(clickVal=="task"){
-				loadTask();
-			}else if(clickVal=="news"){
-				loadMiddleContent();
-			}else if(clickVal=="querytask"){
-				loadqueryList();
-			}
-		} catch (e) {
-			alert(e.message);
-		}
-	});
-    //中间页面
-	function loadMiddleContent() {
-		localStorage.setItem("click", "news");
-		$.getScript("../lib/app/home/tpxwList.js");
-		$("#middleContent").load("news/tpxwList.html", function(a, b, c) {
-			$("#querydataList").listview();   
-		});
-		setTimeout(function() {
-			$.mobile.loading("hide")
-		}, 1000);
-	}
-	//页面右侧
-	function loadRightContent() {
-		localStorage.setItem("moreCurrentName","GT_HomePage_SiteArea_tpxw");
-		$.getScript("../lib/app/home/newsDetail.js");
-		setTimeout(function() {
-			$.mobile.loading("hide");
-		}, 1000);
-	}
-	//加载BI右侧页面
-	function loadRightBIContent(itemBi) {
-		var biId=itemBi.reportId();
-		
-		switch (biId){
-		case 1:
-			$.getScript("../lib/app/home/bi/jyts.js");
-			break;
-		case 6:
-			$.getScript("../lib/app/home/bi/srlrqs.js");
-			break;
-		case 11:
-			$.getScript("../lib/app/home/bi/srwc.js");
-			break;
-		case 16:
-			$.getScript("../lib/app/home/bi/lrwc.js");
-			break;
-		case 21:
-			$.getScript("../lib/app/home/bi/fxzk.js");
-			break;
-		case 31:
-			$.getScript("../lib/app/home/bi/srbk.js");
-			break;
-		case 36:
-			$.getScript("../lib/app/home/bi/lrbk.js");
-			break;
-		case 66:
-			$.getScript("../lib/app/home/bi/srlr.js");
-			break;
-		}
-		
-		setTimeout(function() {
-			$.mobile.loading("hide")
-		}, 1000);
-	}
-	//加载BI 中间页面
-	function loadMiddleBIContent() {
-		$.getScript("../lib/app/home/app.js");
-		setTimeout(function() {
-			$.mobile.loading("hide")
-		}, 1000);
-	}
-	//加载安全生产
-	function loadAqscList(){
-		//alert(2);
-		document.getElementById("tabbox").style.display="none";
-			document.getElementById("middleContent").style.width = '80%';
-		$("#middleContent").load("aqscList.html", function(a, b, c) {
-			//alert(1);
-			//$("#querydataList").listview();
-		});
-		setTimeout(function() {
-			$.mobile.loading("hide")
-		}, 1000);
-	}
-	
-	//加载请示查阅
-	function loadqueryList() {
-		localStorage.setItem("click", "querytask");
-		var click4 = localStorage.getItem("click4");
-		if(click4=="2"){
-			localStorage.setItem("click4", "2");
-		}else{
-			localStorage.setItem("click4", "1");
-		}
-		
-		 document.getElementById("tabbox").style.display='none';//更改ipad页面中tab 是否显示。
-		  $("#middleContent").load("queryList.html", function(a, b, c) {
-			
-		document.getElementById("middleContent").style.width = '80%';
-		document.getElementById('rightContent').style.width = '0%';
-		});
-		
-		
-	}
-	//加载待办列表
-	function loadTask() {
-		document.getElementById("tabbox").style.display='none';//更改ipad页面中tab 是否显示。
-		localStorage.setItem("click", "task");
-		//$.getScript("../lib/app/task/app.js");
-		$("#middleContent").load("task.html", function(a, b, c) {
-			document.getElementById("middleContent").style.width = '80%';
-			document.getElementById('rightContent').style.width = '0%'; 
-		});
-	}
-	//获取中文名  获取待办列表时用
-	function createUser() {
-		//客户端获取cookie
-		
-		$.hori.ajax({
-			"type" : "get",
-			"url" : $.hori.getconfig().appServerHost+"/view/oa/currentuser/doctest/genertec/persontasks.nsf/frmPage?openform",
-			"success" : function(res) {
-				//localStorage.setItem("Chinesename", res);
-				currentUser = "CN=" + res + "/O=genertec";
-				localStorage.setItem("Chinesename", currentUser);
-			},
-			"error" : function(res) {
-			}
-		});
-	}
-</script>
-<style>
-a {
-	text-decoration: none;
-}
-#wrapper {
-	position: fixed;
-	top: 0px;
-	bottom: 48px;
-	width: 84%;
-	overflow: scroll;
-}
-
-#tabbox {
-	width: 600px;
-	overflow: hidden;
-	margin: 0 auto;
-	width:86%;
-	 overflow: hidden; 
-	 margin-left:16%;
-	 align: center
-}
-
-.tab_conbox {
-	border: 1px solid #999;
-	border-top: none;
-}
-
-.tab_con {
-	display: none;
-}
-
-.tabs {
-	height: 32px;
-	border-bottom: 1px solid #999;
-	border-left: 1px solid #999;
-	width: 100%;
-}
-
-.tabs li {
-	height: 31px;
-	line-height: 31px;
-	float: left;
-	border: 1px solid #999;
-	border-left: none;
-	margin-bottom: -1px;
-	background: #e0e0e0;
-	overflow: hidden;
-	position: relative;
-}
-
-.tabs li a {
-	display: block;
-	padding: 0 20px;
-	border: 1px solid #fff;
-	outline: none;
-}
-
-.tabs li a:hover {
-	background: #ccc;
-}
-
-.tabs .thistab, .tabs .thistab a:hover {
-	background: #fff;
-	border-bottom: 1px solid #fff;
-}
-
-a {
-	text-decoration: none;
-}
-
-.ui-listview .ui-li-has-thumb>img:first-child, .ui-listview .ui-li-has-thumb>.ui-btn>img:first-child,
-	.ui-listview .ui-li-has-thumb .ui-li-thumb {
-	position: absolute;
-	left: 5;
-	top: auto;
-	bottom: auto; 
-	max-width: 5em;
-	max-height: 5em;
-}
-
-
-
-#middleContent{
-border:0px;
-padding:3px; 
-PADDING:0px;  
-LINE-HEIGHT: 20px; 
-OVERFLOW: auto;
-margin-left: 10px;
-width:40%;
-selection：background:#a7bd06;color:#FFF;
-}
-#rightContent{
-border:0px;
-padding:3px; 
-PADDING:0px;  
-LINE-HEIGHT: 20px; 
-OVERFLOW: auto;
-margin-left: 10px;
-margin-top:0px;
-width:50%
-}
-#ul{
-border:0px;
-padding:3px; 
-PADDING:0px;  
-LINE-HEIGHT: 20px; 
-OVERFLOW: auto;
-width:100%;
-}
-.bubble-count {
-	font-size: 11px;
-	font-weight: bold;
-	padding: .2em .5em;
-	margin-left: -.5em;
-}
-.container_12 .grid_2 {
-width: 13%;
-}
-</style>
-
-<script >//修改div高度，与屏幕适应
-var sm;//中间属性
-var sr;//右侧属性
-var sul;
-
-window.onload=function()
-{
-var h=document.documentElement.clientHeight;//可见区域高度
-sm=document.getElementById('middleContent');
-sm.style.height=h+"px";
-sr=document.getElementById('rightContent');
-sr.style.height=h+"px";
-sul=document.getElementById('ul');
-sul.style.height=h+"px";
-}
-</script>
-
-=======
-<script type="text/javascript" src="asset/js/echartsHome.js"></script>
-<script src="asset/js/bootstrap.min.js"></script>
-<script src="asset/js/echartsExample.js"></script>
->>>>>>> 0dd324bc09331ac192002ad1dfc94cf0c310c701
 </head>
 <body class="ui-mobile-viewport ui-overlay-c"
 	style="overflow-y: hidden;">
