内情详情页样式添加

--- a/html/neiqingform.html
+++ b/html/neiqingform.html
@@ -107,7 +107,12 @@
 .yjTable {
 	width: 90%;
 	float: center;
+	
+
 }
+.rightHei { border-right: 1px solid #000000} 
+.btmHei { border-bottom: 1px solid #000000} 
+.ztDx { font-size: 16px;} 
 </style>
 
 </head>
