设置向导页面及接口调试 bi页面与手机界面样式同步调试 新闻列表bug修改

--- a/html/bi/jyts.html
+++ b/html/bi/jyts.html
@@ -8,12 +8,15 @@
 a {
 	text-decoration: none;
 }
+p {
+	text-indent: 2em
+}
 </style>
 
 </head>
 <body >
 	<!-- 经营态势 -->
-	<div style="height: 20px;"></div>
+	<div style="height: 20px;margin-top:0px;"></div>
 		<div data-role="content" align="center" id="neirong" >
 		</div>
 </body>
