--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -15,14 +15,14 @@ a {
 </head>
 <body>
 	<!-- 收入完成 -->
-	<div style="float:right;">
-	<div id="yusuan" align="left"></div>
-	<div id="leiji" align="left"></div>
-	<div id="bili" align="left"></div>
+	<div id="main"
+		style="height: 400px; padding-top: 50px; padding-bottom: 10px;">
+
 	</div>
-	<div id="main" style="height: 400px">
-	
+	<div style="float: left; margin-left: 50px;">
+	<div id="yusuan" align="left" style="font-size: 1.3em;"></div>
+		<div id="leiji" align="left" style="font-size: 1.3em;"></div>
+		<div id="bili" align="left" style="font-size: 1.3em;"></div>
 	</div>
-	
 </body>
 </html>
