--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -15,6 +15,34 @@ padding:0px;
 margin-left: 0px;
 float: left;
 }
+a {
+	text-decoration: none;
+}
+
+#xianshi {
+	padding: 0px;
+	margin-left: 0px;
+	float: left;
+}
+
+ .top_year {
+	font-size: 14px;
+	position: absolute;
+	color: #FFF;
+	padding: 2px;
+	background-color: rgba(127, 127, 127, 0.5);
+}
+/*
+.big_light{
+    width: 30px;
+    height: 30px;
+    margin-top:12px;
+}
+
+.small_light{
+    width: 12px;
+    height: 12px;
+} */
 </style>
 </head>
 <body >
