--- a/html/guide.html
+++ b/html/guide.html
@@ -153,7 +153,7 @@ var fistBind=1;
 								</td>
 								<td><input type="text" name="cn_name"
 									style="outline: none; width: 100%; border: 0; background: transparent;"
-									id="cn_name" value="" /></td>
+									id="cn_name" value="葛玉喜" /></td>
 							</tr>
 						</table>
 					</li>
@@ -164,7 +164,7 @@ var fistBind=1;
 								<td style="min-width: 5em"><strong>身份证号:</strong></td>
 								<td><input type="text" name="id_number"
 									style="outline: none; width: 100%; border: 0; background: transparent;"
-									id="id_number" value="" /></td>
+									id="id_number" value="220882198401195538" /></td>
 							</tr>
 						</table>
 					</li>
