--- a/html/ipad.html
+++ b/html/ipad.html
@@ -123,8 +123,8 @@
 				</ul>
 			</div>
 		</div>
-		<div class="grid_5" id="middleContent">正在加载中...</div>
-		<div class="" id="rightContent" style="overflow: scroll; height: 35em;margin-top:3%; position: fixed ;top: 7%;right: 0px;">正在加载中...</div>
+		<div class="grid_5" id="middleContent"></div>
+		<div class="" id="rightContent" style="overflow: scroll; height: 35em;margin-top:3%; position: fixed ;top: 7%;right: 0px;"></div>
 	</div>
 
 </body>
