--- a/html/attachmentShowForm.html
+++ b/html/attachmentShowForm.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>申请单</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=1.0"/>
 
 	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
 
