--- a/html/task.html
+++ b/html/task.html
@@ -6,21 +6,21 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
 	<script type="application/javascript" src="../assets/iscroll.js"></script>
-	<link href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css" rel="stylesheet"></link>
+	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css" /> 
 	<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
 	<script src="../lib/jquery/jquery.min.js"></script>
-	<script src="../lib/jquery-cookie/jquery.cookie.js"></script>
+	<script src="../lib/encrypt/encrypt.js"></script>
 	<script src="../lib/json/json2.js"></script>
 	<script src="../lib/hori/hori.js?tag=21369"></script>
 	<script src="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.js"></script>
-	<script src="../lib/app/task/app.js"></script>
 	<script src="../config/web/config.js"></script>
+	<script src="../lib/app/task/app.js"></script>
 	<style>
 		#wrapper {
 			position: fixed;
 			top: 0px;
 			bottom: 1.5em;
-			width: 100%;
+			width: 90%;
 			overflow: scroll;
 		}
 	</style>
@@ -34,7 +34,7 @@
 				</ul>				
 			</div>
 			<div id="taskList">
-				<div id="wrapper" style="overflow: scroll;width: 99%;margin-left: -10px;height:100%;">
+				<div id="wrapper">
 					<div id="scroller">
 						<div>
 						<br/>
