待办页面调整

--- a/html/login.html
+++ b/html/login.html
@@ -101,6 +101,7 @@
 						localStorage.setItem("oaServerName",$.hori.getconfig().oaServerName)
 						localStorage.setItem("itcode",username);
 						localStorage.setItem("click", "news");
+						localStorage.setItem("click4", "1");
 						saveUserInfoToLocal(username);
 						
 						var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/ipad.html";	
